# rust_CACD_autonomous_factory

./: .code-review-graphignore  .dockerignore  .gitignore  .gitmodules  .graphifyignore  .mcp.json  .opencode.json  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  bandit_output.txt  checks_output.txt  checks_output_final.txt  checks_output_v4.txt  checks_output_v5.txt  coverage_report.txt  coverage_report_2.txt  current_coverage_after_fix.txt  implementation_plan.md  mypy_output.txt  opencode.json  plan.md  pyproject.toml  task.md  test.py  test_hatchet.py  test_ziti.rs  walkthrough.md
.agents/skills/jira_management/: SKILL.md
.agents/skills/protect_branch/: SKILL.md
.artifacts/: ci_pipeline_design.md  migration_plan_rust.md  plan.md  task_rust_migration.md  task_testing_implementation.md
.artifacts/phase_4_keda_integration/: implementation_plan.md  task.md
.cargo/: audit.toml
.gemini/: settings.json
.gemini/hooks/: crg-session-start.sh  crg-update.sh
.github/: CODEOWNERS
.github/workflows/: check.yml  docs-to-wiki.yml  pipeline.yml  publish.yml
.jules/: sentinel.md
Scripts/: check_mcp_health.py  create_topics.py  generate_secrets.sh  prepare_data.py  run_hatchet_worker.py  send_kafka_test.py  test_mcp_client_simple.py  test_mcp_server.py  trigger_mission.py  verify_agent_mcp.py
checkpoints/: bridge_state_test-recovery-112-1783851793.json
confs/: hatchet_inference.yaml  mcp_prompts.yaml  model_config.json  training.yaml  tuning.yaml
crates/factory-application/: Cargo.toml  README.md
crates/factory-application/src/: lib.rs  telemetry_export.rs
crates/factory-application/src/agents/: auditor.rs  coder.rs  doc_agent.rs  finops.rs  mod.rs  planner.rs  qa_observer.rs  reviewer.rs  rustant.rs  tester.rs  zeroclaw.rs
crates/factory-application/src/bridge/: adk_driver.rs  mod.rs  state.rs
crates/factory-application/src/utils/: mod.rs  osr.rs
crates/factory-application/src/workflows/: autonomous_mission.rs  develop_task.rs  mod.rs
crates/factory-application/tests/: bridge_test.rs  workflow_tests.rs  zeroclaw_sast_integration.rs
crates/factory-cli/: Cargo.toml  README.md
crates/factory-cli/src/: main.rs
crates/factory-core/: Cargo.toml  README.md  build.rs
crates/factory-core/benches/: zeroize_benchmark.rs
crates/factory-core/src/: error.rs  executor.rs  lib.rs  security.rs
crates/factory-core/src/proto/: mission_input.proto
crates/factory-core/src/security/: nhi.rs
crates/factory-core/tests/: security_tests.rs
crates/factory-infrastructure/: Cargo.toml  README.md
crates/factory-infrastructure/src/: aethalgard.rs  gitlab.rs  jira.rs  kafka.rs  lib.rs  mcp_client.rs  r2r.rs  s3.rs  security_validator.rs  sentry.rs  vault.rs  ziti.rs
crates/factory-infrastructure/tests/: kafka_integration.rs
crates/factory-mcp-server/: Cargo.toml  README.md
crates/factory-mcp-server/src/: feedback_route.rs  lib.rs  main.rs  protocol.rs  sandbox.rs  scratch.rs
crates/factory-mcp-server/src/skills/: context.rs
crates/factory-mcp-server/src/tools/: bridge.rs  execute_code.rs  index_code.rs  launch_sandbox_pod.rs  mod.rs  plan_mission.rs  retrieve_context.rs  run_tests.rs  sandbox-job.yaml  search_jira.rs  security_review.rs  spec_kit_tasks_to_issues.rs  spec_kit_tool.rs  update_mission_status.rs
crates/factory-mcp-server/tests/: gvisor_integration.rs  security_tests.rs
docs/: README.md  architecture.md  deployment_guide.md  execution_flows.md  mission_history.md  setup_guide_speckit_superpowers_graphify_litellm.md  testing_strategy.md
evaluate/reports/: summary.md
k8s/: factory-mcp-server.yaml  kustomization.yaml  opencode-agent.yaml  opencode-keda.yaml  opencode-sealed-secret.yaml
k8s/base/: configmap.yaml  deployment.yaml  hatchet-admin-token-secret.yaml  kafka-credentials-secret.yaml  keda-trigger-auth.yaml  kustomization.yaml  mcp-configmap.yaml  mcp-deployment.yaml  opencode-configmap.yaml  opencode-deployment.yaml  opencode-scaledobject.yaml  sealed-secret-llm-apps.yaml  sealed-secret.yaml
scripts/: verify-osr.sh
specs/: plan.md  spec.md
src/autogen_team/application/agents/: coder_agent.py  documentation_agent.py  (+3 more)
src/autogen_team/core/: security.py
src/autogen_team/models/: entities.py
tasks/: projects.py
tests/: conftest.py  conftest_e2e_hatchet.py  repro_kafka_log.py  test_coverage_gap_fillers.py
tests/application/agents/: test_agents.py  test_documentation_agent.py
tests/application/jobs/: test_hatchet_inference.py
tests/application/mcp/: conftest.py  test_mcp_server.py
tests/application/workflows/: test_autonomous_mission.py
tests/confs/valid/: 0. tuning.yaml  model_config.json
tests/core/: test_security.py
tests/e2e/: test_autonomous_mission_e2e.py  test_hatchet_connection.py
tests/infrastructure/client/: test_mcp_client.py
tests/infrastructure/io/: test_osvariables_fix.py
tests/infrastructure/messaging/: test_kafka_app.py  test_kafka_security.py
tests/infrastructure/orchestration/: test_hatchet_orchestration.py
tests/infrastructure/services/: test_hatchet_service.py  test_mcp_service.py  test_sandbox_service.py
tests/registry/adapters/: test_mlflow_adapter_security.py  test_security_mlflow_adapter.py
tests/security/: test_mcp_path_traversal.py
wiki/: AGENT-SPECIFICATIONS.md  Architecture.md  BUSINESS-CONTEXT.md  Configs_stories.md  Datasets_stories.md  EXPERIMENT-LIFECYCLE.md  EXPERIMENT-LOGS.md  GLOSSARY.md  Home.md  INFRASTRUCTURE-ADAPTERS.md  Inference_Async_Hatchet_stories.md  MCP_stories.md  Models_stories.md  OSvariables_stories.md  PRODUCTION-OPERATIONS.md  README.md  SRS_Index.md  SRS_Infrastructure.md  SRS_MCP.md  STRATEGIC-DESIGN.md  Schemas_stories.md  Scripts_stories.md  Searchers_stories.md  Settings_stories.md  Signers_stories.md  Solution_Architecture_Report.md  Splitters_stories.md  TACTICAL-DESIGN.md  Test_Plan_Report.md  USER-MANUAL.md  VERIFICATION-TRIAD.md  _SIDEBAR.md  _Sidebar.md  agents-agent.md  agents_specification.md  architecture.md  bridge-checkpoint.md  business_understanding.md  deployment_guide.md  execution_flows.md  (+18 more)
(+30 files in other folders)
