[workspace]
members = [
    "crates/factory-core",
    "crates/factory-application",
    "crates/factory-mcp-server",
    "crates/factory-infrastructure",
    "crates/factory-cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
