# https://python-poetry.org/docs/pyproject/

# PROJECT

[tool.poetry]
name = "autogen_team"
version = "2.1.0"
description = "Predict the number of autogen_team available."
authors = ["Admin <admin@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lgcorzo/llmops-python-package"
documentation = "https://lgcorzo.github.io/llmops-python-package/"
keywords = ["mlops", "python", "package"]
packages = [{ include = "autogen_team", from = "src" }]

[tool.poetry.scripts]
autogen_team = "autogen_team.scripts:main"

# DEPENDENCIES

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
loguru = "^0.7.2"
matplotlib = "^3.9.0"
mlflow = "3.5.0"
numpy = "^1.26.4"
omegaconf = "^2.3.0"
pandas = "^2.2.2"
pandera = "^0.20.1"
plotly = "^5.22.0"
plyer = "^2.1.0"
psutil = "^6.0.0"
pyarrow = "^15.0.2"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
pynvml = "^11.5.0"
setuptools = "^78.1.1"
scikit-learn = "1.4.2"
shap = "^0.46.0"
dvc = "^3.58.0"
agent-framework-core = { git = "https://github.com/microsoft/agent-framework.git", subdirectory = "python/packages/core" }
litellm = "^1.60.8"
transformers = "^4.48.3"
pytest-asyncio = "^0.25.3"
textstat = "^0.7.5"
autogenstudio = "^0.4.1.11"
opentelemetry-instrumentation = ">=0.51b0"
opentelemetry-exporter-otlp-proto-http = ">=1.30.0"
opentelemetry-exporter-otlp = ">=1.30.0"
confluent-kafka = "^2.8.2"
boto3 = "^1.42.24"
hatchet-sdk = ">=0.1.0"
mcp = ">=1.0.0"
httpx = ">=0.27.0"


[tool.poetry.group.checks.dependencies]
bandit = "^1.7.9"
coverage = "^7.5.4"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pandera = { extras = ["mypy"], version = "^0.20.1" }
ruff = "^0.5.0"
pytest-mock = "^3.14.0"
mocogpt = {git = "https://github.com/lgcorzo/mocogpt.git", extras = ["cli"]}

[tool.poetry.group.commits.dependencies]
commitizen = "^3.27.0"
pre-commit = "^3.7.1"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.5.1"

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.4"
nbformat = "^5.10.4"

# CONFIGURATIONS

[tool.bandit]
targets = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
changelog_start_rev = "v1.0.0"
update_changelog_on_bump = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.mypy]
pretty = true
strict = true
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["attr-defined","method-assign","union-attr", "misc", "redundant-cast", "no-untyped-call"]
plugins = ["pandera.mypy", "pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]
norecursedirs = ["Scripts", ".venv", ".git", "__pycache__"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]

# SYSTEMS

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
