[package]
name = "factory-application"
version = "0.1.0"
edition = "2024"

[dependencies]
factory-core = { path = "../factory-core" }
factory-infrastructure = { path = "../factory-infrastructure" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
hatchet-sdk = { workspace = true }
mockall = { workspace = true }
tokio-test = { workspace = true }
