[package]
name = "factory-application"
version = "0.1.0"
edition = "2024"

[features]
production = ["factory-infrastructure/production"]

[dependencies]
factory-core = { path = "../factory-core" }
factory-infrastructure = { path = "../factory-infrastructure" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
hatchet-sdk = { workspace = true }
mockall = { workspace = true }
prost = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
async-openai = "0.23"
rdkafka = { workspace = true }

tokio-test = { workspace = true }
chrono.workspace = true

[dev-dependencies]
factory-infrastructure = { path = "../factory-infrastructure", features = ["test-utils"] }
