[package]
name = "factory-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
factory-application = { path = "../factory-application" }
factory-infrastructure = { path = "../factory-infrastructure" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
anyhow = { workspace = true }
hatchet-sdk = { workspace = true }
