[package]
name = "factory-cli"
version = "0.1.0"
edition = "2024"

[features]
production = ["factory-application/production", "factory-infrastructure/production"]

[dependencies]
factory-application = { path = "../factory-application" }
factory-infrastructure = { path = "../factory-infrastructure" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
anyhow = { workspace = true }
hatchet-sdk = { workspace = true }
serde_json = { workspace = true }
sentry = "0.48.4"
jemallocator = "0.5.4"
