[package]
name = "factory-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
prost = { workspace = true }
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
prost-build = { workspace = true }

[[bench]]
name = "zeroize_benchmark"
harness = false
