[package]
name = "factory-infrastructure"
version = "0.1.0"
edition = "2021"

[features]
test-utils = []

[dependencies]
factory-core = { path = "../factory-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rdkafka = { workspace = true }
aws-config = "1.0"
aws-sdk-s3 = "1.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
mockall = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
